Porting task init for ESP-IDF

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,6 @@ message("=======================================================================
 
 
 idf_component_register( SRC_DIRS        "./targets/freertos"
-                        INCLUDE_DIRS    "./include/" "./targets/freertos/")
+                        INCLUDE_DIRS    "./include" "./targets/freertos/")
 message("==================================================================================================")
 message("Exiting ${CMAKE_CURRENT_LIST_DIR}/CMakeLists.txt")
-
-# idf_component_register(SRCS "./src/lwmem/lwmem.c"
-#                       INCLUDE_DIRS "./src/include/lwmem/")
-
