Update debug messages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,3 @@
-cmake_minimum_required(VERSION 3.22)
-
 # 
 set (SRC_DIRS       ${CMAKE_CURRENT_LIST_DIR}/targets/freertos)
 set (INCLUDE_DIRS   
@@ -8,11 +6,9 @@ set (INCLUDE_DIRS
 )
 
 # Debug message
-message("Entering ${CMAKE_CURRENT_LIST_DIR}/CMakeLists.txt")
-message("==================================================================================================")
+message("========== Entering ${CMAKE_CURRENT_LIST_DIR}/CMakeLists.txt ==========")
 
 idf_component_register( SRC_DIRS        ${SRC_DIRS}
                         INCLUDE_DIRS    ${INCLUDE_DIRS})
 
-message("==================================================================================================")
-message("Exiting ${CMAKE_CURRENT_LIST_DIR}/CMakeLists.txt")
+message("========== Exiting ${CMAKE_CURRENT_LIST_DIR}/CMakeLists.txt ==========")
